# rdf

./: .gitignore  .gitmodules  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  project.vim
data/supervised_classification/: exp1_n2.txt
include/: CDFSampler.h  ClassificationContext.h  DataCollection.h  DataPoint.h  DataRange.h  Feature.h  Feature2f.h  Forest.h  ForestTrainer.h  Histogram.h  HistogramAggregator.h  IDataPointCollection.h  IFeature.h  IStatistics.h  IStatisticsAggregator.h  ITrainingContext.h  ImageCommon.h  ImageContext.h  ImageFeature.h  ImageFeatureExtractor.h  Instance.h  Instance2f.h  Interfaces.h  Node.h  RandomTree.h  StatisticsAggregator.h  Test.h  ThresholdSampler.h  ToyCommon.h  ToyContext.h  ToyFeature.h  TrainingContext.h  TrainingParameters.h  Tree.h  TreeTrainer.h  gnuplot_i.hpp
include/classification/: HlfContext.h  HlfFeature.h  HlfTestSampler.h  HogCommon.h  HogContext.h  HogFeature.h  HogTestSampler.h  ImageCommon.h  ImageContext.h  ImageFeature.h  ImageTestSampler.h
include/core/: DataPoint.h  Forest.h  ForestTrainer.h  Histogram.h  Interfaces.h  Path.h  Test.h  TrainingParameters.h  Tree.h  TreeTrainer.h
include/detection/: DetectionCommon.h  DetectionContext.h  DetectionFeature.h  DetectionStatistics.h  DetectionTestSampler.h
include/toy/: ToyCommon.h  ToyContext.h  ToyData.h  ToyFeature.h  ToyTestSampler.h
scripts/: al2idl.py
src/: detection.cpp  detection_tester.cpp  detection_trainer.cpp  el_test.cpp  hog_like.cpp  hog_split.cpp  image.cpp  image_cross.cpp  image_split.cpp  main.cpp  plot.cpp  roc.cpp  toy_plot.cpp  toy_roc.cpp  toy_roc.py  toy_stat.cpp
src/detection/: DetectionFeature.cpp
